@@ -1,3 +1,3 @@
-<div id="htmlCaption_[[+id]]" class="nivo-html-caption">
+[[+html:notempty=`<div id="htmlCaption_[[+id]]" class="nivo-html-caption">
   [[+html]]
-</div>
+</div>`]]
