@@ -1,5 +1,12 @@
 Changelog for slideshowmanager.
 
+SlideshowManager 1.1 pl 7/11/2012
+===========================
+ - Added updateSlideshow snippet, only needed if you have issues after updating
+ - Fixed file upload field storing issue
+ - Changed the base snippet slightly and updated nivo_htmlCaptionTpl Chunk accordingly
+
+
 SlideshowManager 1.1 rc2 7/11/2012
 ===========================
  - Added optional load jQuery #2 if you aready are loading jquery set this to false
